--- a/css/style.css
+++ b/css/style.css
@@ -47,47 +47,34 @@ a:hover {
 body {
     font-family: ubuntu;
     background-color: #f1f5f9;
+    padding-inline: clamp(0.47rem, calc(0.45rem + 0.08vw), 0.51rem);
 }
 
-/* header section */
 header {
     font-family: aquire;
     font-size: var(--step-5);
     font-weight: bold;
+    text-align: center;
+    padding-block: 16px;
 }
 
-form[id='search'] {
+/* header section */
+.header-section {
+    background-color: white;
     display: flex;
-    border-radius: 3em;
-    width: 250px;
-    font-size: var(--step-1);
+    flex-direction: column;
+    gap: 16px;
+    padding-top: 24px;
+    padding-bottom: 16px;
+    padding-inline: 24px;
+    border-radius: 16px;
+    box-shadow: 4px 4px 4px #e2e8f0;
 }
 
-form, input {
-    background-color: #ccfbf1;
-    outline: none;
-    border: none;
-    width: 180px;
-    padding-left: 12px;
-
-}
-
-.search-icon-wrapper {
-    display: flex;
-    height: 25px;
-    width: 25px;
-    justify-content: end;
-    align-items: center;
-}
-
-.search-icon {
-    opacity: 0.6;
-    height: 18px;
-    width: 18px;
-}
-
+/* profile section */
 .current-profile {
     display: flex;
+    cursor: pointer;
 }
 
 .jesse-martin-avatar {
@@ -105,6 +92,14 @@ form, input {
     font-size: var(--step-3);
 }
 
+/* actions section */
+.action {
+    place-self: center;
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+}
+
 .action > button {
     background-color: #2dd4bf;
     border: none;
@@ -113,21 +108,30 @@ form, input {
     border-radius: 3em;
     color: #f0fdfa;
     cursor: pointer;
+    font-size: var(--step-0);
 }
 
 /* main section */
+/* projects section */
 .your-projects {
     display: flex;
     flex-direction: column;
-    gap: var(--step-2);
+    gap: var(--step-1);
     place-items: center;
 }
 
+.your-projects > h3,
+.announcement > h3,
+.trending > h3 {
+    padding-top: 16px;
+    padding-bottom: 4px;
+}
+
 .cards {
-    width: 280px;
-    height: 150px;
+    width: 99%;
+    height: 180px;
     background-color: white;
-    border-radius: 8px;
+    border-radius: 16px;
     box-shadow: 4px 4px 4px #e2e8f0;
 }
 
@@ -141,8 +145,8 @@ form, input {
 .announcement-items {
     background-color: white;
     padding: 16px;
-    width: 280px;
-    border-radius: 8px;
+    width: 99%;
+    border-radius: 16px;
     box-shadow: 4px 4px 4px #e2e8f0;
 }
 
@@ -160,8 +164,8 @@ form, input {
 .trending-items {
     background-color: white;
     padding: 16px;
-    width: 280px;
-    border-radius: 8px;
+    width: 99%;
+    border-radius: 16px;
     box-shadow: 4px 4px 4px #e2e8f0;
 }
 
@@ -182,23 +186,58 @@ form, input {
 }
 
 /* navigation menu */
+/* search */
+form[id='search'] {
+    display: flex;
+    border-radius: 3em;
+    width: 70vw;
+    font-size: var(--step-2);
+    height: var(--step-5);
+    align-items: center;
+}
+
+form, input {
+    background-color: #ccfbf1;
+    outline: none;
+    border: none;
+    width: 50vw;
+    padding-left: 8px;
+}
+
+.search-icon-wrapper {
+    display: flex;
+    height: var(--step-4);
+    width: var(--step-4);
+    justify-content: end;
+    align-items: end;
+}
+
+.search-icon {
+    opacity: 0.6;
+    height: var(--step-2);
+    width: var(--step-2);
+}
+
 nav {
     background-color: #14b8a6;
     padding-inline: 16px;
-    padding-block: 32px;
-    width: 280px;
-    border-radius: 16px;
-    box-shadow: 4px 4px 4px #e2e8f0;
+    padding-block: var(--step-6);
+    width: 80vw;
+    border-radius: 0px 16px 16px 0px;
     display: flex;
     flex-direction: column;
-    gap: 80px;
+    gap: clamp(3.49rem, calc(-10.12rem + 68.05vw), 38.37rem);
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: none;
 }
 
 li {
     list-style: none;
     font-weight: bold;
-    font-size: var(--step-2);
+    font-size: clamp(1.40rem, calc(0.86rem + 2.74vw), 2.81rem);
     color: white;
 }
 
@@ -206,5 +245,10 @@ li {
 .nav2 > ul{
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: clamp(1.40rem, calc(-2.00rem + 17.03vw), 10.13rem);
+    padding-left: var(--step-3);
+}
+
+.nav1 > ul {
+    padding-top: clamp(1.69rem, calc(-2.60rem + 21.42vw), 12.67rem);
 }
