--- a/css/style.css
+++ b/css/style.css
@@ -47,17 +47,6 @@ a:hover {
 body {
     font-family: ubuntu;
     background-color: #f1f5f9;
-    padding-inline: clamp(0.47rem, calc(0.45rem + 0.08vw), 0.51rem);
-}
-
-header {
-    font-family: aquire;
-    font-size: var(--step-7);
-    font-weight: bold;
-    text-align: center;
-    padding-block: clamp(0.75rem, calc(0.43rem + 1.59vw), 1.56rem);
-    color: #14b8a6;
-    text-shadow: 1px 1px 8px;
 }
 
 /* header section */
@@ -65,23 +54,32 @@ header {
     background-color: white;
     display: flex;
     flex-direction: column;
-    gap: var(--step-4);
-    padding-top: var(--step-7);
-    padding-bottom: var(--step-6);
-    padding-inline: 24px;
-    border-radius: 16px;
-    box-shadow: 4px 4px 4px #e2e8f0;
+    gap: var(--step-3);
+    padding-bottom: var(--step-3);
+    padding-inline: var(--step-3);
 }
+
+header > h1 > a {
+    font-family: aquire;
+    font-size: var(--step-7);
+    font-weight: bold;
+    color: #14b8a6;
+    text-shadow: 1px 1px 8px;
+    cursor: pointer;
+}
+
+header {text-align: center;}
 
 /* profile section */
 .current-profile {
     display: flex;
     cursor: pointer;
+    gap: clamp(0.33rem, calc(0.33rem + 0.00vw), 0.33rem);
 }
 
 .jesse-martin-avatar {
     border-radius: 6em;
-    height: 60px;
+    height: var(--step-9);
 }
 
 .profile-info {
@@ -96,17 +94,16 @@ header {
 
 /* actions section */
 .action {
-    place-self: center;
+    justify-content: center;
     display: flex;
     gap: clamp(0.45rem, calc(-3.19rem + 18.18vw), 9.77rem);
-    flex-wrap: wrap;
 }
 
 .action > button {
     background-color: #2dd4bf;
     border: none;
-    padding-block: clamp(0.63rem, calc(0.38rem + 1.22vw), 1.25rem);
-    width: clamp(4.84rem, calc(2.65rem + 10.91vw), 10.43rem);
+    padding-block: clamp(0.56rem, calc(0.53rem + 0.15vw), 0.64rem);
+    width: clamp(6.48rem, calc(4.25rem + 11.17vw), 12.21rem);
     border-radius: 3em;
     color: #f0fdfa;
     cursor: pointer;
@@ -123,25 +120,58 @@ header {
 .card-wrapper {
     display: flex;
     flex-direction: column;
-    gap: var(--step-1);
+    gap: var(--step-3);
     place-items: center;
 }
 
-.your-projects > h3,
-.announcement > h3,
-.trending > h3 {
+.your-projects > h2,
+.announcement > h2,
+.trending > h2 {
     padding-top: 16px;
     padding-bottom: 4px;
     place-self: center;
 }
 
-.cards {
+main,
+.announcement,
+.trending {
+    padding-inline: clamp(0.47rem, calc(0.45rem + 0.08vw), 0.51rem);
+}
+
+.card {
     width: 99%;
     height: 240px;
     background-color: white;
     border-radius: 16px;
     box-shadow: 4px 4px 4px #e2e8f0;
+    display: flex;
 }
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding-inline: var(--step-3);
+}
+
+.accent-color {
+    border-radius: 16px 0px 0px 16px;
+    width: clamp(0.56rem, calc(0.53rem + 0.15vw), 0.64rem);
+    background-color: #14b8a6;
+}
+
+.main-content {
+    padding-block: var(--step-3);
+    display: flex;
+    flex-direction: column;
+    gap: clamp(0.26rem, calc(0.28rem + -0.02vw), 0.27rem);
+}
+
+.main-content > p {
+    color: #52525b;
+}
+
+.maybe {font-size: 0.33rem;}
 
 /* announcement section */
 .announcement {
