--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ main,
 
 .card {
     width: 99%;
-    height: 240px;
+    height: 280px;
     background-color: white;
     border-radius: 16px;
     box-shadow: 4px 4px 4px #e2e8f0;
@@ -152,6 +152,8 @@ main,
     flex-direction: column;
     flex: 1;
     padding-inline: var(--step-3);
+    justify-content: space-between;
+    padding-block: var(--step-3);
 }
 
 .accent-color {
@@ -161,7 +163,6 @@ main,
 }
 
 .main-content {
-    padding-block: var(--step-3);
     display: flex;
     flex-direction: column;
     gap: clamp(0.26rem, calc(0.28rem + -0.02vw), 0.27rem);
