--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,8 @@ body {
     background-color: #f1f5f9;
 }
 
+p {line-height: 1.3rem;}
+
 /* header section */
 .header-section {
     background-color: white;
@@ -59,16 +61,20 @@ body {
     padding-inline: var(--step-3);
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 header > h1 > a {
     font-family: aquire;
-    font-size: var(--step-7);
+    font-size: var(--step-5);
     font-weight: bold;
     color: #14b8a6;
     text-shadow: 1px 1px 8px;
     cursor: pointer;
 }
-
-header {text-align: center;}
 
 /* profile section */
 .current-profile {
@@ -206,10 +212,14 @@ main,
 
 .trending-items {
     background-color: white;
-    padding: 16px;
+    padding: var(--step-4);
     width: 99%;
     border-radius: 16px;
     box-shadow: 4px 4px 4px #e2e8f0;
+    display: flex;
+    flex-direction: column;
+    gap: var(--step-3);
+    cursor: pointer;
 }
 
 .trending-items > .item1,
@@ -234,7 +244,7 @@ form[id='search'] {
     display: flex;
     border-radius: 3em;
     width: 70vw;
-    font-size: var(--step-2);
+    font-size: var(--step-1);
     height: var(--step-5);
     align-items: center;
 }
@@ -261,7 +271,8 @@ form, input {
     width: var(--step-2);
 }
 
-nav {
+.nav-show,
+.nav-hidden {
     background-color: #14b8a6;
     padding-inline: 16px;
     padding-block: var(--step-6);
@@ -272,9 +283,16 @@ nav {
     gap: clamp(3.49rem, calc(-10.12rem + 68.05vw), 38.37rem);
     height: 100vh;
     position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
+}
+
+.nav-hidden {
+    transform: translateX(-100%);
+    transition: transform 350ms ease-in-out, opacity 200ms linear;
+}
+
+.nav-show {
+    transform: translateX(0);
+    transition: transform 350ms ease-in-out, opacity 200ms linear;
 }
 
 li {
@@ -309,4 +327,9 @@ li {
 .share {
     height: 30px;
     color: #2dd4bf;
+}
+
+.hamburger {
+    height: 35px;
+    cursor: pointer;
 }
