--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ main,
 }
 
 .main-content > p {
-    color: #52525b;
+    color: #343a3a;
 }
 
 .maybe {font-size: 0.33rem;}
@@ -210,6 +210,7 @@ main,
 
 .announcement-items > div > p {
     font-size: var(--step-1);
+    color: #46464e;
 }
 
 /* trending section */
@@ -217,7 +218,7 @@ main,
     display:flex;
     flex-direction: column;
     place-items: center;
-    padding-bottom: 8px;
+    padding-bottom: 16px;
 }
 
 .trending-items {
@@ -389,7 +390,7 @@ li:hover {
         grid-template-columns: 1vw 1fr 1fr 1vw;
         grid-template-areas: 
         "header header header header"
-        "...... proj   proj   ......"
+        "proj   proj   proj   proj"
         "...... ann    trend  ......";
     }
 
@@ -418,5 +419,159 @@ li:hover {
 
     .trending-items {
         height: 420px; width: calc(200px + 20vw)
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+
+    body {
+        display: grid;
+        grid-template-columns: 20vw 1fr 1fr 1fr;
+        grid-template-areas: 
+        "nav    header  header  header"
+        "nav    proj    aside   .";
+    }
+
+    #nav-menu {
+        transform: translateX(0);
+        position: static;
+        grid-area: nav;
+        width: auto;
+        height: auto;
+        gap: var(--step-0);
+        border-radius: 0px;
+        padding-inline: 0.5rem;
+    }
+
+    li {
+        font-size: var(--step-2);
+    }
+
+    .nav1 > ul,
+    .nav2 > ul {
+        gap: var(--step-1);
+    }
+
+    .hamburger {display: none;}
+    .nav1 > ul {padding-top: var(--step-2);}
+    input {width: 13vw;}
+
+    .search-icon-wrapper {
+        align-self: start;
+        height: 35px;
+    }
+
+    #search {
+        width: 18vw;
+        height: 40px;
+        font-size: var(--step-0);
+    }
+
+    .header-section {
+        grid-area: header;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding-inline: var(--step-0);
+        padding-block: 0;
+    }
+
+    header {grid-column: 1/2;}
+
+    header > h1 {padding: 0;}
+    header > h1 > a {font-size: var(--step-4);}
+    
+    .greeting {
+        grid-column: 1/2;
+        place-self: start;
+        width: 260px;
+        height: 4rem;
+    }
+
+    .profile-info > span {
+        font-size: var(--step-2);
+    }
+
+    .action {
+        grid-column: 2/4;
+        gap: 1rem;
+        height: 4rem;
+        width: 440px;
+    }
+
+    .action > button {
+        height: 2rem;
+        place-self: center;
+        width: 6rem;
+        font-size: var(--step-0);
+        padding: 0;
+    }
+
+    .jesse-martin-avatar {
+        height: var(--step-5);
+    }
+
+    .your-projects {
+        grid-area: proj;
+        width: 700px;
+        padding-inline: 16px;
+        padding-bottom: 16px;
+    }
+
+    .your-projects > h2 {
+        place-self: start;
+    }
+
+    .card-wrapper {
+        width: 100%;
+        justify-content: start;
+        flex-direction: row nowrap;
+    }
+
+    .card {
+        width: calc(280px + 1vw);
+        height: calc(250px + 1vh);
+    }
+
+    .card-content {padding: 1rem;}
+
+    main {padding: 0;}
+
+    .announcement {
+        grid-area: aside;
+        height: 480px;
+        place-items: start;
+        width: calc(280px + 1vw);
+    }
+
+    .announcement > h2,
+    .trending > h2 {place-self: start;}
+
+    .announcement-items {
+        padding: 1rem;
+        flex: 1;
+        width: 100%;
+    }
+
+    .announcement-items > div > h3,
+    .announcement-items > div > p {
+        font-size: var(--step-0);
+    }
+
+    .trending {
+        grid-area: aside;
+        align-self: end;
+        width: calc(280px + 1vw);
+    }
+
+    .trending-items {
+        gap: var(--step-0);
+        flex: 1;
+        width: 100%;
+        padding: 16px;
+    }
+
+    .trending-items > div > img {
+        border-radius: 6em;
+        height: 40px;
     }
 }
